# dex

./: .env.template  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  README.md  SECURITY.md  SUPPORT.md  TODO.md  docker-compose.test.yml  mkdocs.yml  netlify.toml  poe_tasks.toml  pyproject.toml  release-please-config.json  sonar-project.properties
.claude/: settings.json
.claude/commands/: debug.md  fix-lint.md  new-feature.md  pr.md  review.md  sync.md  techdebt.md  validate.md
.github/: CHECKLISTS.md  GUIDELINES.md  MAINTAINER_PLAYBOOK.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  release-pr-template.md
.github/ISSUE_TEMPLATE/: config.yml
.github/agents/: backend-engineer.agent.md  code-reviewer.agent.md  data-engineer.agent.md  devops-engineer.agent.md
.github/instructions/: data-pipelines.instructions.md  fastapi.instructions.md  infrastructure.instructions.md  ml.instructions.md  python.instructions.md  workflows.instructions.md
.github/prompts/: debug.prompt.md  fix-lint.prompt.md  new-dag.prompt.md  new-endpoint.prompt.md  new-feature.prompt.md  new-issue.prompt.md  refactor.prompt.md
.github/workflows/: WORKFLOWS_GUIDE.md  auto-pr.yml  build.yml  cd.yml  ci.yml  claude.yml  docker-build-push.yml  docs-notify.yml  docs-pages.yml  docs-sync.yml  package-validation.yml  promote.yml  pypi-publish.yml  release-careerdex.yml  release-dataenginex.yml  release-dex.yml  release-please.yml  release.yml  security.yml
api-collection/v1-careerdex/: career-health.bru  data-sources.bru  job-recommendations.bru  market-careers.bru  market-trends.bru  salary-prediction.bru  skill-gaps.bru  system-config.bru
docs/: ARCHITECTURE.md  CI_CD.md  CONTRIBUTING.md  DEVELOPMENT.md  OBSERVABILITY.md  RELEASE_NOTES.md  SDLC.md  SECURITY_SCANNING.md  architecture.md  ci-cd.md  contributing.md  development.md  docs-hub.md  index.md  observability.md  quickstart.md  release-notes.md  release-pr-template.md  sdlc.md  security-scanning.md
docs/adr/: 0000-template.md  0001-medallion-architecture.md
docs/api-reference/: ai.md  api.md  config.md  core.md  dashboard.md  data.md  engine.md  index.md  lakehouse.md  middleware.md  ml.md  orchestration.md  plugins.md  secops.md  warehouse.md
docs/careerdex/: index.md
docs/roadmap/: project-roadmap.csv
docs/superpowers/plans/: 2026-03-21-phase-0-foundation.md  2026-03-22-dataenginex-1.0-master-plan.md  2026-03-22-phase-1-data-layer.md  2026-03-22-phase-6a-dex-engine-integration.md  2026-03-22-phase-6b-dex-studio-redesign.md  2026-03-23-careerdex-example.md  2026-03-23-dex-studio-direct-import.md  2026-03-24-dex-naming-architecture-dry.md  2026-03-28-unified-docs-and-tooling.md
docs/superpowers/specs/: 2026-03-21-dataenginex-v2-system-redesign.md  2026-03-22-phase-6-integration-design.md  2026-03-23-dex-studio-direct-import-design.md  2026-03-24-dex-naming-architecture-dry-design.md  2026-03-28-unified-docs-and-tooling-design.md
docs/weather/: index.md
examples/: 01_hello_pipeline.py  02_api_quickstart.py  04_ml_training.py  05_rag_demo.py  06_llm_quickstart.py  07_api_ingestion.py  08_spark_ml.py  09_feature_engineering.py  10_model_analysis.py  GUIDE.md  dex.yaml  movies.csv
examples/dashboard/: dashboard_config.yaml  run_dashboard.py
examples/data/: events.csv  users.csv
examples/ecommerce/: dex.yaml  run_all.py
infra/monitoring/grafana/: GUIDE.md
infra/terraform/: .gitignore
infra/terraform/test-storage/: GUIDE.md  gcs.tf  main.tf  outputs.tf  s3.tf  terraform.tfvars.example  variables.tf
learning/: GUIDE.md
scripts/: GUIDE.md  promote.sh  setup-system.sh
scripts/localstack/: init.sh
src/careerdex/: GUIDE.md  __init__.py  plugin.py
src/careerdex/api/: main.py
src/careerdex/config/: __init__.py  job_config.json
src/careerdex/core/: __init__.py  exceptions.py  notifier.py  pipeline_config.py  schemas.py  settings.py  validators.py
src/careerdex/dags/: job_ingestion_dag.py
src/careerdex/models/: __init__.py
src/careerdex/phases/: __init__.py  phase1_foundation.py  phase2_job_ingestion.py  phase3_embeddings.py  phase4_ml_models.py  phase5_api_services.py  phase6_testing_deployment.py
src/dataenginex/: README.md  RELEASE_NOTES.md  __init__.py  _json.py  engine.py  store.py  worker.py
src/dataenginex/ai/: __init__.py  llm.py  vectorstore.py
src/dataenginex/api/: __init__.py  auth.py  errors.py  factory.py  health.py  jwks.py  ldap_sync.py  pagination.py  rate_limit.py  rbac.py  schemas.py  (+1 more)
tasks/: findings.md  lessons.md
tests/: conftest.py
tests/conformance/: test_connector.py  test_feature_store.py  test_tracker.py  test_transform.py
tests/fixtures/: sample_data.py  sample_jobs.csv  sample_jobs.json
tests/integration/: __init__.py  test_ai_integration.py  test_api_middleware_integration.py  test_cli_run.py  test_config_cli.py  test_e2e_api.py  test_full_app.py  test_lineage_integration.py  test_ml_integration.py  test_pipeline_e2e.py  test_secops_integration.py  test_storage_real.py
tests/load/: locustfile.py
tests/unit/: __init__.py  test_agent_runtime.py  test_ai_modules.py  test_ai_router.py  test_ai_router_extended.py  test_api_auth.py  test_api_extensions.py  test_api_factory.py  test_api_jwks.py  test_api_pagination.py  test_api_rate_limit.py  test_api_rbac.py  test_api_schemas.py  test_api_scim.py  test_api_validators.py  test_builtin_agent.py  test_builtin_feature_store.py  test_builtin_serving.py  test_builtin_tracker.py  test_careerdex_phases.py  test_cli_train.py  test_config_loader.py  test_config_schema.py  test_config_schema_extended.py  test_core_exceptions.py  test_core_interfaces.py  test_core_quality.py  test_core_registry.py  test_core_schemas_extended.py  test_csv_connector.py  test_data.py  test_data_router.py  test_dbt_connector.py  test_dex_engine.py  test_dex_store.py  test_domain_metrics.py  test_domain_metrics_wiring.py  test_drift_scheduler.py  test_duckdb_connector.py  test_guarded_provider.py  (+37 more)
(+118 files in other folders)
