[project]
name = "dataenginex"
version = "0.4.0"
description = "DataEngineX — open-source, self-hosted, local-first Data + ML + AI workbench library"
authors = [
    {name = "Jay", email = "jayapal.myaka99@gmail.com"}
]
readme = "src/dataenginex/README.md"
requires-python = ">=3.13"
license = {file = "LICENSE"}
dependencies = [
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "click>=8.3.3",
    "duckdb>=1.5.2",
    "croniter>=6.2.2",
    "httpx>=0.28.1",
    "prometheus-client>=0.25.0",
    "structlog>=25.5.0",
    # Data formats
    "pyarrow>=23.0.1",
    # Async job queue (ARQ — Redis-backed, single dep)
    "arq>=0.28.0",
    "redis>=5.3.1",
    # Async PostgreSQL (SCIM persistence, lineage, model registry)
    "asyncpg>=0.31.0",
    # Qdrant vector DB client
    "qdrant-client>=1.18.0",
]

[project.scripts]
dex = "dataenginex.cli.main:dex"

[project.optional-dependencies]
cloud = [
    "boto3>=1.43.7",
    "google-cloud-storage>=3.10.1",
    "google-cloud-bigquery>=3.41.0",
]
# NOTE: litellm is NOT declared here because it pins python-dotenv==1.0.1, which
# conflicts with our python-dotenv>=1.2.1. Install separately for LiteLLMProvider:
#     pip install 'litellm>=1.83.3' --no-deps
# or manage via a dedicated venv. The provider is lazy-imported; DEX runs fine
# without it.
observability = [
    "langfuse>=4.5.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.14",
    "mypy>=2.1.0",
    "types-pyyaml>=6.0.12.20260408",
    "types-requests>=2.33.0.20260503",
    "poethepoet>=0.46.0",
    "uv>=0.11.16",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
    "pre-commit>=4.6.0",
    "pip-audit>=2.10.0",
]
data = [
    "pyspark>=4.1.2",
    "databricks-cli>=0.18.0",
    "requests>=2.34.2",
]
notebook = [
    "ipykernel>=7.2.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
]
ml = [
    "scikit-learn>=1.8.0",
    "xgboost>=3.2.0",
    "numpy>=2.4.4",
    "sentence-transformers>=5.5.1",
]
# mlflow is in its own group — it pins pandas<3 which conflicts with notebook>=3.0
# Install with: uv sync --group ml --group tracking
tracking = [
    "mlflow>=3.12.0",
]
[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dataenginex"]

[tool.uv]
python-preference = "only-managed"
default-groups = ["dev"]
override-dependencies = [
    # mlflow 3.12.0+ supports pandas 3.x but still has pandas<3 constraint
    # Override to allow pandas>=3.0 (verified working via mlflow#22372)
    "pandas>=3.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C90"]

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
warn_return_any = true
warn_unreachable = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["structlog.*", "prometheus_client.*", "opentelemetry.*", "arq.*", "asyncpg.*", "qdrant_client.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["boto3.*", "google.auth.*", "google.cloud.*", "google.api_core.*", "pyarrow.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["mlflow.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["sentence_transformers.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["litellm.*", "langfuse.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pyspark.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["dataenginex.data.quality.spark"]
warn_unused_ignores = false  # pyspark optional: ignore used in CI, unused when installed

[[tool.mypy.overrides]]
module = ["dataenginex.ai.vectorstore"]
warn_unused_ignores = false  # sentence-transformers optional: ignore used in CI, unused when installed

[[tool.mypy.overrides]]
module = ["dataenginex.lakehouse.storage"]
warn_unused_ignores = false  # pre-commit installs google-cloud-storage (ignore used), CI does not (ignore unused)

[[tool.mypy.overrides]]
module = ["dataenginex.ml.training"]
warn_unused_ignores = false  # sklearn may be installed (import-untyped) or not (import-not-found) depending on env

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
filterwarnings = [
    "error",                                          # Treat all warnings as errors by default
    "ignore::DeprecationWarning:websockets\\.legacy",  # uvicorn uses deprecated websockets.legacy API
    "ignore::DeprecationWarning:uvicorn\\.protocols",  # uvicorn imports deprecated WebSocketServerProtocol
    "ignore:unclosed.*socket:ResourceWarning",         # Starlette TestClient GC timing
    "ignore:unclosed event loop:ResourceWarning",      # Starlette TestClient GC timing
    "ignore::pytest.PytestUnhandledThreadExceptionWarning",  # Qdrant compatibility check thread
]

[tool.coverage.run]
branch = true
source = ["dataenginex"]
omit = [
    # Requires a live MLflow server — not available in CI (same as S3/GCS integration tests)
    "*/src/dataenginex/ml/mlflow_registry.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
