[project]
name = "dataenginex"
version = "0.4.0"
description = "DataEngineX — open-source, self-hosted, local-first Data + ML + AI workbench library"
authors = [
    {name = "Jay", email = "jayapal.myaka99@gmail.com"}
]
readme = "src/dataenginex/README.md"
requires-python = ">=3.13"
license = {file = "LICENSE"}
dependencies = [
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "click>=8.3.3",
    "duckdb>=1.5.2",
    "croniter>=6.2.2",
    "httpx>=0.28.1",
    "prometheus-client>=0.25.0",
    "structlog>=25.5.0",
    "pyarrow>=23.0.1",
]

[project.scripts]
dex = "dataenginex.cli.main:dex"

[project.optional-dependencies]
cloud = [
    "boto3>=1.43.22",
    "google-cloud-storage>=3.10.1",
    "google-cloud-bigquery>=3.41.0",
]
# litellm pins python-dotenv==1.0.1 — install separately if needed:
#   pip install 'litellm>=1.83.3' --no-deps
postgres = ["asyncpg>=0.31.0"]
qdrant   = ["qdrant-client>=1.18.0"]
queue    = ["arq>=0.28.0"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.14",
    "mypy>=2.1.0",
    "types-pyyaml>=6.0.12.20260408",
    "types-requests>=2.33.0.20260503",
    "poethepoet>=0.46.0",
    "uv>=0.11.16",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
    "pre-commit>=4.6.0",
    "pip-audit>=2.10.0",
]
data = [
    "pyspark>=4.1.2",
    "databricks-cli>=0.18.0",
    "requests>=2.34.2",
]
notebook = [
    "ipykernel>=7.2.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
]
ml = [
    "scikit-learn>=1.8.0",
    "xgboost>=3.2.0",
    "numpy>=2.4.4",
    "sentence-transformers>=5.5.1",
]
# mlflow pins pandas<3 — install separately: uv sync --group ml --group tracking
tracking = ["mlflow>=3.12.0"]

[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dataenginex"]

[tool.uv]
python-preference = "only-managed"
default-groups = ["dev"]
override-dependencies = [
    # mlflow 3.12.0+ works with pandas 3.x despite its constraint
    "pandas>=3.0",
]

# ── Ruff ─────────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C90"]

[tool.ruff.lint.mccabe]
max-complexity = 8

# ── Mypy ─────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
warn_return_any = true
warn_unreachable = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "structlog.*", "prometheus_client.*",
    "arq.*", "asyncpg.*", "qdrant_client.*",
    "boto3.*", "google.auth.*", "google.cloud.*", "google.api_core.*",
    "pyarrow.*", "mlflow.*", "sentence_transformers.*",
    "litellm.*", "pyspark.*",
]
ignore_missing_imports = true

# These modules use optional imports that may or may not be installed
[[tool.mypy.overrides]]
module = [
    "dataenginex.data.quality.spark",
    "dataenginex.data.connectors.spark",
    "dataenginex.data.connectors.dbt",
    "dataenginex.ai.vectorstore",
    "dataenginex.lakehouse.storage",
    "dataenginex.ml.training",
]
warn_unused_ignores = false

# ── Pytest ───────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:websockets\\.legacy",
    "ignore::DeprecationWarning:uvicorn\\.protocols",
    "ignore:unclosed.*socket:ResourceWarning",
    "ignore:unclosed event loop:ResourceWarning",
    "ignore::pytest.PytestUnhandledThreadExceptionWarning",
    "ignore::dataenginex.ai.runtime.sandbox.ExperimentalFeatureWarning",
]

# ── Coverage ─────────────────────────────────────────────────────────────────

[tool.coverage.run]
branch = true
source = ["dataenginex"]
# parallel=true merges data from COVERAGE_PROCESS_START subprocesses so that
# module-level code (imported at collection time) is correctly measured.
parallel = true
omit = ["*/src/dataenginex/ml/mlflow_registry.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
