[project]
name = "dataenginex"
version = "0.4.3"
description = "DataEngineX — open-source, self-hosted, local-first Data + ML + AI workbench library"
authors = [{ name = "Jay", email = "jayapal.myaka99@gmail.com" }]
readme = "src/dataenginex/README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
dependencies = [
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyyaml>=6.0.3",
    "click>=8.3.3",
    "duckdb>=1.5.2",
    "croniter>=6.2.2",
    "httpx>=0.28.1",
    "prometheus-client>=0.25.0",
    "structlog>=25.5.0",
    "pyarrow>=23.0.1",
    "orjson>=3.11.0",
    "zstandard>=0.25.0",
    "msgpack>=1.2.1",
]

[project.scripts]
dex = "dataenginex.cli.main:dex"

[project.optional-dependencies]
cloud = [
    "boto3>=1.43.7",
    "google-cloud-storage>=3.10.1",
    "google-cloud-bigquery>=3.41.0",
]
delta = ["deltalake>=0.24.0"]
postgres = ["asyncpg>=0.31.0"]
qdrant = ["qdrant-client>=1.18.0"]
queue = ["arq>=0.28.0"]
pytorch = ["torch>=2.0.0"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.14",
    "mypy>=2.1.0",
    "types-pyyaml>=6.0.12.20260408",
    "types-requests>=2.33.0.20260503",
    "poethepoet>=0.46.0",
    "uv>=0.11.16",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
    "pre-commit>=4.6.0",
    "pip-audit>=2.10.0",
]
data = ["pyspark>=4.1.2"]
notebook = ["pandas>=3.0.2"]
ml = ["scikit-learn>=1.8.0", "sentence-transformers>=5.5.1"]
tracking = ["mlflow>=3.12.0"]

[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dataenginex"]

[tool.uv]
python-preference = "only-managed"
default-groups = ["dev"]
override-dependencies = ["pandas>=3.0"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C90"]

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "structlog.*",
    "prometheus_client.*",
    "arq.*",
    "asyncpg.*",
    "qdrant_client.*",
    "boto3.*",
    "google.auth.*",
    "google.cloud.*",
    "google.api_core.*",
    "pyarrow.*",
    "mlflow.*",
    "sentence_transformers.*",
    "litellm.*",
    "pyspark.*",
    "torch.*",
    "deltalake.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "dataenginex.data.quality.spark",
    "dataenginex.data.connectors.spark",
    "dataenginex.data.connectors.dbt",
    "dataenginex.data.connectors.delta",
    "dataenginex.ai.vectorstore",
    "dataenginex.lakehouse.storage",
    "dataenginex.ml.training",
]
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:websockets\\.legacy",
    "ignore::DeprecationWarning:uvicorn\\.protocols",
    "ignore:unclosed.*socket:ResourceWarning",
    "ignore:unclosed event loop:ResourceWarning",
    "ignore::pytest.PytestUnhandledThreadExceptionWarning",
    "ignore::dataenginex.ai.runtime.sandbox.ExperimentalFeatureWarning",
]

[tool.coverage.run]
branch = true
source = ["dataenginex"]
parallel = true
omit = [
    "*/src/dataenginex/ml/mlflow_registry.py",
    "*/src/dataenginex/data/connectors/delta.py",
    "*/src/dataenginex/lakehouse/storage.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
